# fast-but_right-api

./: README.md  pyproject.toml
src/: logging.py  main.py
src/auth/: controller.py  models.py  service.py
src/database/: core.py
src/entities/: todo.py  user.py
src/todos/: models.py  service.py
src/users/: controller.py  models.py  service.py
