[project]
name = "fast-but-right-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "slowapi",
    "python-dotenv",
    "pyjwt",
    "passlib",
    "bcrypt==4.0.1",
    "python-multipart",
    "email-validator"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "black",
    "ruff",
]

